Add locality and latlon validation based on polygon

--- a/markaspot_validation.info.yml
+++ b/markaspot_validation.info.yml
@@ -1,5 +1,5 @@
-name: Mark-a-Spot validation
-description: Provides some constraints for entities of the Mark-a-Spot ditribution.
+name: Mark-a-Spot Validation
+description: Provides some constraints and configuration for entities of the Mark-a-Spot ditribution.
 package: Mark-a-Spot
 type: module
 core: 8.x
