Add namespace geophp fork as repository

--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,14 @@
       "role": "Maintainer"
     }
   ],
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "https://github.com/mishal/GeoPHP"
+    }
+  ],
   "require": {
-    "phayes/geophp": "1.2",
+    "phayes/geophp": "1.2.2",
     "weiyongsheng/polygon": "dev-master",
     "anthonymartin/geo-location": "^1.0"
   }
