Add mishal/geophp as separate package

--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,22 @@
   ],
   "repositories": [
     {
-      "type": "vcs",
-      "url": "https://github.com/mishal/GeoPHP"
+      "type": "package",
+      "package": {
+        "name": "mishal/geophp",
+        "version": "1.2.2",
+        "dist": {
+          "url": "https://github.com/mishal/GeoPHP/archive/1.2.2.zip",
+          "type": "zip"
+        },
+        "require": {
+          "composer/installers": "~1.0"
+        }
+      }
     }
   ],
   "require": {
-    "mishal/GeoPHP": "1.2.2",
+    "mishal/geophp": "1.2.2",
     "weiyongsheng/polygon": "dev-master",
     "anthonymartin/geo-location": "^1.0"
   }
