--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
   "repositories": [
     {
       "type": "vcs",
-      "url": "https://github.com/mishal/GeoPHP"
+      "url": "https://github.com/markaspot/GeoPHP"
     }
   ],
   "require": {
