Add anthonymartin/geo-location (v1.0.1) as requirement.

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     }
   ],
   "require": {
-    "phayes/geophp": "dev-master"
+    "phayes/geophp": "dev-master",
+    "anthonymartin/geo-location": "^1.0"
   }
 }
